example/iptables-save.txt
# Generated by iptables-save v1.6.1 on Wed Jan 24 00:09:05 2018
*filter
:INPUT ACCEPT [49:3480]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28:2428]
:NEWCHAIN - [0:0]
-A FORWARD -d 192.168.0.123/32 -i internet -o lan -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.0.123/32 -i internet -o lan -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.0.1/32 -i internet -o lan -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.0.1/32 -i internet -o lan -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 192.168.1.0/24 -i lan -o wan -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -d 192.168.0.0/24 -i wan -o lan -j ACCEPT
-A FORWARD -s 192.168.0.1/32 -i lan -o internet -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.0.1/32 -i lan -o internet -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i lan -o internet -p tcp -m tcp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i lan -o internet -p udp -m udp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.0.0/24 -i lan -o internet -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Wed Jan 24 00:09:05 2018
# Generated by iptables-save v1.6.1 on Wed Jan 24 00:09:05 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:422]
:POSTROUTING ACCEPT [6:422]
-A PREROUTING -d 123.123.123.123/32 -i internet -j DNAT --to-destination 192.168.0.123
-A PREROUTING -d 123.123.123.1/32 -i internet -p tcp -m tcp --dport 53 -j DNAT --to-destination 192.168.0.1
-A PREROUTING -d 123.123.123.1/32 -i internet -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.0.1
-A POSTROUTING -s 192.168.0.0/24 -o internet -j SNAT --to-source 123.123.123.1
-A POSTROUTING -s 192.168.1.0/24 -o internet -j SNAT --to-source 123.123.123.2
-A POSTROUTING -o internet -j MASQUERADE
COMMIT
# Completed on Wed Jan 24 00:09:05 2018
